
2004/07/01: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - added a new widget type: "HLine". This widget simply draws a horizontal
    line or serves as a placeholder (to be used with the DialogLoader).
  - finished GWEN_UILoader. It is now able to automatically arrange widgets,
    to populate created widgets with user data and to retrieve the data
    modified by the user. It is now usable with Libchipcard2 ;-)
    See doc/testdialog.xml for an example. You can try this with the
    following gwentest-command (from within the "test" folder):
    "#> gwentest ../doc/testdialog.xml"
    

2004/06/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - widget loader can now setup a complete dialog (including HTML help
    texts etc).
  - started working on a function whcih populates the dialog widgets with
    values. The next step will be to retrieve and validate data entered by
    the user.


2004/06/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - finished widget-loader, I will now have to think of a way to
    automatically run a dialog and fill in form dar from a DB and to
    store the user input into it. This will very much simplify creating
    of dialogs.


2004/06/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - started working on a widget-loader (loads and creates widgets from an
    XML file)
- parser:
  - xml: introduced a file-load flag which allows selecting whether some
    unclosed HTML tags are accepted (like <br>) or not.
    The default still is not to.
  - db: introduced new value type PTR (allows portable storage of 
    void* pointers)


2004/06/28: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- configure.ac: fixed a bug (the headers from src/parser where not
  symlinked)
- parser/xml: