@@ -1,0 +1,6 @@
+INCLUDES=@all_includes@
+
+bin_PROGRAMS=dlgtest
+#noinst_HEADERS=args.h
+dlgtest_SOURCES=main.c
+dlgtest_LDADD=-L/mingw/lib -L../../src @gwenhywfar_libs@
